tuned in styling and coloring on thumbs, 1d and 2d. added correct font and margins to show dream mode. made it so only comment poster or owner of entry can delete comments - UI ONLY, not hooked in. made it so adding tags is only viewable by entry owner. made it so onblur the tagger closes. added padding-right:40 to .matrix to prevent drop-shadow browser horizontal scrollbar

--- a/app/sass/entries.sass
+++ b/app/sass/entries.sass
@@ -8,6 +8,7 @@
 
 #entryField, #home
   .matrix
+    padding-right: 40px
     /******** PAGINATION ********/
     .dark.pageFirst, .dark.pageFirst:hover
       border: 2px solid transparent
@@ -488,8 +489,10 @@
         padding: 1px 4px
 
 #tagStream, #showEntry
-  #tagsLive, #tag-list
+  #tagsLive
     +clear
+  #tagsLive, #tag-list
+    clear: left
     // WHO, WHERE, WHAT TAG STYLES
     .tagWho, .tagWhat, .tagWhere, .tagNoImage
       +round(8)
